Prevent large images from overflowing content column

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ pre, code {
 pre { margin-bottom: 1.5rem; padding: 0.5rem; }
 code { padding: 0 2px; white-space: nowrap; }
 
-img { display: block; margin: 0 auto; }
+img { display: block; margin: 0 auto; max-width: 100%; }
 
 .twitter-tweet { margin: 2rem auto !important; }
 
